--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -573,7 +573,7 @@ en:
       check_balance: Check Balance
       connect_with_paypal: Connect with Paypal
       connect: Connect
-      connected: Connected Bank Account
+      connected: Connected
       deposit_currency_label: "Deposit Currency: "
       deposit_currency: "BAT to "
       deposit_date_explanation: Contribution balance gets deposited into your connected account at the 8th of every month.
