--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -721,6 +721,7 @@ en:
       downloaded: "downloaded"
       installed: "installed"
       confirmed: "confirmed"
+      last_updated_at: "Last updated about %{time} ago"
       active_referral: "active"
       add_channel: "Add a web site or youtube channel below to get the promo link!"
       violation: We regret to inform you that we've suspended your ability to participate in Brave Rewards Program due to violation of our <a href="https://basicattentiontoken.org/publisher-terms-of-service/">Terms of Service</a>. However, you can still earn and redeem rewards from participating in our other programs.
