--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -714,6 +714,7 @@ ja:
       downloaded: "ダウンロード済み"
       installed: "インストール済み"
       confirmed: "確認済み"
+      last_updated_at: "約％{time}前に最終更新"
       active_referral: "アクティブ"
       add_channel: "紹介リンクを取得するには、ウェブサイトまたはチャンネルを確認してください。"
       violation: 残念ながら<a href="https://basicattentiontoken.org/publisher-terms-of-service/">利用規約</a>への違反が確認されたため、Brave Rewardsプログラムへの参加が停止されました。 ただし、他のプログラムに参加することで、報酬を獲得して引き換えることができます。
