--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -579,8 +579,9 @@ en:
       deposit_date_explanation: Contribution balance gets deposited into your connected account at the 8th of every month.
       disconnect: Disconnect
       heading: Your Deposit Account
-      last_deposit: LAST DEPOSIT
-      last_deposit_date: "Last Deposit Date: "
+      last_deposit: "Last Deposit:"
+      last_deposit_date: "made on "
+      view_account_summary: "Check Balance"
       no_currencies_available: We're unable to load deposit currencies from Uphold at this time. Please check again later.
       no_currency_selected: None selected
       still_not_verified: Your Paypal account still isn't verified. Please try again when you link your bank account.
