--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -129,6 +129,7 @@ ja:
         no_https: "ドメインでHTTPSを有効にするか、別の確認方法を選択してください。"
         generic: "この認証エラーが引き続き発生する場合は、％{support_email}までご連絡ください。"
     publisher:
+      last_updated_at: "約%{time}前に最終更新"
       balance_unavailable: "現在利用できません"
       conversion_unavailable: "%{code} が現在利用できません"
       no_deposit: まだデポジットは行われていません
