--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -131,6 +131,7 @@ en:
     publisher:
       balance_unavailable: "Unavailable"
       conversion_unavailable: "%{code} unavailable"
+      next_deposit: by %B 8th 11:59 PM San Francisco time
       no_deposit: No deposit made yet
       balance_pending_approximate: ~ %{amount} %{code}
       channel_type:
