--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -538,7 +538,7 @@ en:
       migration: We are currently performing scheduled maintenance. During this time you may see some issues with your uphold wallet. We should be fully functional shortly.
       noscript: Please enable JavaScript in your browser if you wish to interact with the dashboard.
       title: Dashboard
-      balance_pending: PENDING PAYOUTS
+      balance_pending: BALANCE
       next_deposit_date: "Next Deposit Date: "
       payout_in_progress: "Payout In Progress"
       add_channel_cta: Add a website or YouTube channel to see how much your fans on Brave have contributed so far.
