--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -540,6 +540,7 @@ en:
       balance_pending: BALANCE
       next_deposit_date: "Next Deposit Date: "
       payout_in_progress: "Payout In Progress"
+      payout_minimum_balance: "Minimum balance for payout is %{amount} %{currency}"
       add_channel_cta: Add a website or YouTube channel to see how much your fans on Brave have contributed so far.
       held_funds: SUSPENDED BAT
       held_funds_description: |
