Initial view setup

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -810,7 +810,7 @@ en:
       https_error_encountered: "The following error was encountered: "
     new:
       heading: Enter Domain Info
-      ads_enable_question: Allow Brave to serve ads on my website
+      ads_enable_question: "Allow Brave to serve ads on my website."
       learn_more: Learn More
     progress:
       info: Domain Info
