--- a/config/locales/views/browser_users/en.yml
+++ b/config/locales/views/browser_users/en.yml
@@ -2,3 +2,6 @@ en:
   browser_users:
     pending_balance:
       balance_pending: Referral Balance
+      bat_in_locale: BAT
+      next_deposit_date: "Next deposit date: "
+      payout_in_progress: Payout in Progress
