--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,6 +35,7 @@ en:
     channel_not_found: Channel not found
     channel_removed: Channel removed.
     continue: Continue
+    date_format: "%b %d, %Y"
     dashboard: Dashboard
     referrals: Referrals
     payments: Payments
@@ -559,6 +560,7 @@ en:
       payout_in_progress: "Payout In Progress"
       payout_minimum_balance: "Minimum balance for payout is %{amount} %{currency}"
       add_channel_cta: Add a website or YouTube channel to see how much your fans on Brave have contributed so far.
+      merchant: Merchant Keys
       held_funds: SUSPENDED BAT
       held_funds_description: |
         These funds have been flagged for irregular activity. Appeal this action by <a href="/publishers/case/new">following these steps.</a>
