--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -36,6 +36,7 @@ en:
     channel_quota_exceeded: We're so popular we exceeded our daily quota of YouTube registrations. Please try again tomorrow.
     channel_removed: Channel removed.
     continue: Continue
+    date_format: "%b %d, %Y"
     dashboard: Dashboard
     referrals: Referrals
     payments: Payments
@@ -560,6 +561,7 @@ en:
       payout_in_progress: "Payout In Progress"
       payout_minimum_balance: "Minimum balance for payout is %{amount} %{currency}"
       add_channel_cta: Add a website or YouTube channel to see how much your fans on Brave have contributed so far.
+      merchant: Merchant Keys
       held_funds: SUSPENDED BAT
       held_funds_description: |
         These funds have been flagged for irregular activity. Appeal this action by <a href="/publishers/case/new">following these steps.</a>
