--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -762,6 +762,8 @@ en:
       downloaded: "downloaded"
       installed: "installed"
       confirmed: "confirmed"
+      unpayable_notice: "Connect and verify your identity with Uphold to enroll the referral promo program."
+      restricted_country: "Your region is currently unable to participate in the referral promo program."
       last_updated_at: "Last updated about %{time} ago"
       group: "Group %{number}"
       active_referral: "active"
