Fix it for people who have already enabled

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -764,6 +764,7 @@ en:
       confirmed: "confirmed"
       unpayable_notice: "Connect and verify your identity with Uphold to enroll the referral promo program."
       restricted_country: "Your region is currently unable to participate in the referral promo program."
+      ineligible: "You are ineligible to take part in this program. You must verify your identity with your wallet provider and be in a supported region."
       last_updated_at: "Last updated about %{time} ago"
       group: "Group %{number}"
       active_referral: "active"
