--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -391,6 +391,9 @@ en:
       heading: Reject transfer
       reject: Reject
   publishers:
+    home_balances:
+      balance_pending: BALANCE
+      next_deposit_date: "Next Deposit Date: "
     shared:
       enter_email: Enter your email
       sign_up: Sign Up
@@ -557,7 +560,6 @@ en:
       noscript: Please enable JavaScript in your browser if you wish to interact with the dashboard.
       title: Dashboard
       balance_pending: BALANCE
-      next_deposit_date: "Next Deposit Date: "
       payout_in_progress: "Payout In Progress"
       payout_minimum_balance: "Minimum balance for payout is %{amount} %{currency}"
       add_channel_cta: Add a website or YouTube channel to see how much your fans on Brave have contributed so far.
