Test to make sure Travis isn't down

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -103,7 +103,7 @@ en:
       contact: "For assistance please contact us at: %{support_email}"
   faqs:
     index:
-      title: Frequently Asked Questions
+      title: Frequently Asked Questions (FAQ)
   helpers:
     channels:
       verification_in_progress: Verification in progress
