--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -726,6 +726,14 @@ en:
         uphold_error: There was a problem connecting with Uphold. %{message}
         state_mismatch: Specifically, there was a mismatch between our state and Uphold.
         missing_state: There is no state token, this might have happened if you clicked the back button.
+    stripe_connections:
+      new:
+        stripe_error: There was a problem connecting with Stripe. %{message}
+        state_mismatch: Specifically, there was a mismatch between our state and Stripe.
+        missing_state: There is no state token, this might have happened if you clicked the back button.
+      destroy:
+        removed: Removed Stripe Connection
+        errors: There were some errors removing your stripe account. %{errors}
   promo:
     publisher_not_found: "No publisher found for this promo, please contact support+publishers@basicattentiontoken.org."
     activate:
