--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -729,6 +729,9 @@ en:
     gemini_connections:
       new:
         gemini_error: There was a problem connecting with Gemini. %{message}
+      destroy:
+        removed: Removed Gemini Connection
+        errors: There were some errors removing your Gemini account. %{errors}
     stripe_connections:
       new:
         stripe_error: There was a problem connecting with Stripe. %{message}
